--- a/login.html
+++ b/login.html
@@ -12,27 +12,30 @@
     <div class="login-container">
         <div class="login-box">
             <h2>Login to Order Food</h2>
-            <form action="#">
+            <form action="#" id="loginForm">
+                
                 <div class="textbox" id="user">
-                    <input type="text"  required>
+                    <input type="text" id="username" required>
                     <label for="">Username/E-mail</label>
                 </div>
                 <div class="textbox" id="pass">
-                    <input type="password"  required>
+                    <input type="password" id="password" required>
                     <label for="">Password</label>
-                </div>
-               
+                </div> 
+                <div id="errorMessages" class="error-messages"></div>
                 <div class="forgot-password">
                     <a href="#">Forgot Password?</a>
                 </div>
-                <button type="submit" class="login-btn">Login</button>
+                <button type="submit" class="login-btn" onclick="validateForm()">Login</button>
             </form>
             <div class="register-link">
-                <p>Don't have an account? <a href="#">Sign up</a></p>
+                <p>Don't have an account? <a href="sign.html">Sign up</a></p>
             </div>
         </div>
     </div>
 </section>
 </div>
+
+<script src="login.js"></script>
 </body>
 </html>
